--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
 
   <section id="home">
     <div class="hero-content">
-      <img src="D:\portpolio\PROFILE-P3.jpeg" alt="D Nandini Photo" />
+      <img src="PROFILE-P3.jpeg" alt="D Nandini Photo" />
       <div class="personal-details">
         <h2>About Me</h2>
         <p><strong>Name:</strong> D Nandini</p>
