--- a/projects.html
+++ b/projects.html
@@ -140,7 +140,11 @@
         <li>Integrated student and faculty portals for streamlined access to important information.</li>
         <li>Focused on SEO optimization and basic security for performance and reliability.</li>
       </ul>
-      
+      <div class="project-report">
+        <a href="https://nandini1506.github.io/jyothisanga-University/" target="_blank">
+          <i class="fas fa-file-alt"></i> Click to Website
+        </a>
+      </div>
     </div>
 
     <div class="project">
