--- a/contact.html
+++ b/contact.html
@@ -12,11 +12,79 @@
       background: linear-gradient(135deg, #2980b9, #6dd5fa);
       margin: 0;
       padding: 0;
-      display: flex;
-      justify-content: center;
-      align-items: center;
       min-height: 100vh;
       color: #fff;
+    }
+
+    header {
+      background: #2c3e50;
+      padding: 15px 20px;
+      position: sticky;
+      top: 0;
+      z-index: 1000;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      flex-wrap: wrap;
+    }
+
+    header h1 {
+      font-size: 24px;
+      margin: 0;
+    }
+
+    nav {
+      position: relative;
+    }
+
+    .nav-links {
+      list-style: none;
+      display: flex;
+      gap: 15px;
+      margin: 0;
+      padding: 0;
+    }
+
+    .nav-links li a {
+      color: white;
+      text-decoration: none;
+      font-weight: 500;
+      padding: 8px 14px;
+      border-radius: 6px;
+    }
+
+    .nav-links li a:hover {
+      background-color: #1abc9c;
+      color: black;
+    }
+
+    .menu-toggle {
+      display: none;
+      font-size: 24px;
+      cursor: pointer;
+      padding: 5px 10px;
+      background: #1abc9c;
+      border-radius: 5px;
+    }
+
+    @media (max-width: 768px) {
+      .nav-links {
+        display: none;
+        flex-direction: column;
+        background: #2c3e50;
+        position: absolute;
+        right: 0;
+        top: 60px;
+        width: 100%;
+      }
+
+      .nav-links.show {
+        display: flex;
+      }
+
+      .menu-toggle {
+        display: block;
+      }
     }
 
     .contact-card {
@@ -28,6 +96,7 @@
       width: 90%;
       padding: 40px 30px;
       text-align: center;
+      margin: 80px auto;
       animation: slideUp 0.8s ease forwards;
       opacity: 0;
       transform: translateY(40px);
@@ -40,7 +109,7 @@
       }
     }
 
-    h1 {
+    h2 {
       margin-bottom: 25px;
       font-size: 32px;
       letter-spacing: 2px;
@@ -89,27 +158,44 @@
     }
 
     @media (max-width: 480px) {
-      h1 {
+      h2 {
         font-size: 26px;
       }
+
       .contact-item {
         font-size: 18px;
         gap: 12px;
       }
+
       .contact-item i {
         font-size: 24px;
         min-width: 28px;
       }
     }
   </style>
-  <link
-    rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
-  />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
 </head>
 <body>
+  <header>
+    <h1>D Nandini</h1>
+    <nav>
+      <ul class="nav-links">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="projects.html">Projects</a></li>
+        <li><a href="skills.html">Skills</a></li>
+        <li><a href="certifications.html">Certifications</a></li>
+        <li><a href="education.html">Education</a></li>
+        <li><a href="experience.html">Experience</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
+      <div class="menu-toggle" onclick="document.querySelector('.nav-links').classList.toggle('show')">
+        ☰
+      </div>
+    </nav>
+  </header>
+
   <div class="contact-card">
-    <h1>Contact Me</h1>
+    <h2>Contact Me</h2>
 
     <div class="contact-item" onclick="window.location.href='tel:+916362478561'">
       <i class="fas fa-phone"></i>
