--- a/experience.html
+++ b/experience.html
@@ -19,17 +19,75 @@
     }
 
     header {
-      background: linear-gradient(to right, #0f2027, #203a43, #2c5364);
+      background: #2c3e50;
+      padding: 15px 20px;
+      position: sticky;
+      top: 0;
+      z-index: 1000;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      flex-wrap: wrap;
       color: white;
-      text-align: center;
-      padding: 35px 20px;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.25);
     }
 
     header h1 {
-      font-size: 32px;
-      letter-spacing: 1px;
-      margin-bottom: 5px;
+      font-size: 24px;
+      margin: 0;
+    }
+
+    nav {
+      position: relative;
+    }
+
+    .nav-links {
+      list-style: none;
+      display: flex;
+      gap: 15px;
+      margin: 0;
+      padding: 0;
+    }
+
+    .nav-links li a {
+      color: white;
+      text-decoration: none;
+      font-weight: 500;
+      padding: 8px 14px;
+      border-radius: 6px;
+    }
+
+    .nav-links li a:hover {
+      background-color: #1abc9c;
+      color: black;
+    }
+
+    .menu-toggle {
+      display: none;
+      font-size: 24px;
+      cursor: pointer;
+      padding: 5px 10px;
+      background: #1abc9c;
+      border-radius: 5px;
+    }
+
+    @media (max-width: 768px) {
+      .nav-links {
+        display: none;
+        flex-direction: column;
+        background: #2c3e50;
+        position: absolute;
+        right: 0;
+        top: 60px;
+        width: 100%;
+      }
+
+      .nav-links.show {
+        display: flex;
+      }
+
+      .menu-toggle {
+        display: block;
+      }
     }
 
     .container {
@@ -136,26 +194,30 @@
     footer {
       text-align: center;
       padding: 20px 0;
-      background: linear-gradient(to right, #0f2027, #203a43, #2c5364);
+      background: #2c3e50;
       color: #fff;
       font-size: 14px;
       margin-top: 60px;
     }
-
-    @media (max-width: 500px) {
-      header h1 {
-        font-size: 26px;
-      }
-      h2 {
-        font-size: 22px;
-      }
-    }
   </style>
 </head>
 <body>
-
   <header>
-    <h1>D Nandini - Professional Experience</h1>
+    <h1>D Nandini</h1>
+    <nav>
+      <ul class="nav-links">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="projects.html">Projects</a></li>
+        <li><a href="skills.html">Skills</a></li>
+        <li><a href="certifications.html">Certifications</a></li>
+        <li><a href="education.html">Education</a></li>
+        <li><a href="experience.html">Experience</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
+      <div class="menu-toggle" onclick="document.querySelector('.nav-links').classList.toggle('show')">
+        ☰
+      </div>
+    </nav>
   </header>
 
   <div class="container">
@@ -178,7 +240,6 @@
           "Completed a 4-week internship in Python programming, gaining hands-on experience in core concepts, scripting, and real-world application development."
         ]
       }
-     
     ];
 
     const expList = document.getElementById("experience-list");
@@ -208,6 +269,5 @@
       expList.appendChild(card);
     });
   </script>
-
 </body>
 </html>
