--- a/projects.html
+++ b/projects.html
@@ -17,18 +17,75 @@
     }
 
     header {
-      background: #000000dd;
-      padding: 30px 20px;
-      text-align: center;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.5);
+      background: #2c3e50;
+      padding: 15px 20px;
+      position: sticky;
+      top: 0;
+      z-index: 1000;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      flex-wrap: wrap;
+      color: white;
     }
 
     header h1 {
+      font-size: 24px;
       margin: 0;
-      font-size: 36px;
-      color: #00ffff;
-      text-shadow: 0 0 10px #00ffffaa;
-      letter-spacing: 1.5px;
+    }
+
+    nav {
+      position: relative;
+    }
+
+    .nav-links {
+      list-style: none;
+      display: flex;
+      gap: 15px;
+      margin: 0;
+      padding: 0;
+    }
+
+    .nav-links li a {
+      color: white;
+      text-decoration: none;
+      font-weight: 500;
+      padding: 8px 14px;
+      border-radius: 6px;
+    }
+
+    .nav-links li a:hover {
+      background-color: #1abc9c;
+      color: black;
+    }
+
+    .menu-toggle {
+      display: none;
+      font-size: 24px;
+      cursor: pointer;
+      padding: 5px 10px;
+      background: #1abc9c;
+      border-radius: 5px;
+    }
+
+    @media (max-width: 768px) {
+      .nav-links {
+        display: none;
+        flex-direction: column;
+        background: #2c3e50;
+        position: absolute;
+        right: 0;
+        top: 60px;
+        width: 100%;
+      }
+
+      .nav-links.show {
+        display: flex;
+      }
+
+      .menu-toggle {
+        display: block;
+      }
     }
 
     .container {
@@ -111,7 +168,21 @@
 <body>
 
   <header>
-    <h1>✨ My Projects ✨</h1>
+    <h1>D Nandini</h1>
+    <nav>
+      <ul class="nav-links">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="projects.html">Projects</a></li>
+        <li><a href="skills.html">Skills</a></li>
+        <li><a href="certifications.html">Certifications</a></li>
+        <li><a href="education.html">Education</a></li>
+        <li><a href="experience.html">Experience</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
+      <div class="menu-toggle" onclick="document.querySelector('.nav-links').classList.toggle('show')">
+        ☰
+      </div>
+    </nav>
   </header>
 
   <div class="container">
@@ -146,7 +217,7 @@
         </a>
       </div>
     </div>
-
+    
     <div class="project">
       <h2>Computer Graphics Project: OpenGL Snake Game with Sound Integration</h2>
       <ul>
@@ -167,4 +238,3 @@
 
 </body>
 </html>
-
